# retrust

./: .gitignore  README.md  USAGE.md  environment.yml  graph1.gephi  interactions.json  lib.py  opinions.json  package.json  pyproject.toml  reprocess_input.py  requirements.txt  test.py  tsconfig.json
contracts/: Makefile  ReputationToken.sol  Retrust.sol  deploy.sh  fdeploy.sh  frontend-copy.sh  package-lock.json  package.json  seth.env  testchain.sh
contracts/deploy/: EBSL  EBSLCore  GUACToken  GUACToken.js  LOG  MemberNFT  MemberNFT.js  Registry  Registry.js  TrustToken  deploy.sh  deploy1.sh  deployments.env.sh  sample.sh
contracts/src/: Contracts.sol  Contracts.t.sol  EBSL.sol  EBSLCore.sol  EntryExit.sol  GUACToken.sol  Liquidao.sol  MemberNFT.sol  MemberNFT.t.sol  Registry.sol  TokenCommunalCurve.sol  TrustToken.sol  VoteToken.sol  Votes.sol
contracts/test/: dec-conv  env.sh  test1.sh  user.sh
contracts/vyper/: ebsl.vy  (+2 more)
docs/: algovis.txt  mechanics.md  protocol.md  quorum.txt  trainstorm2.md
ebsl/: helpers.py  lib.py  reputation.py
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json
networks/: 1-simple.dot  1-simple.evidence.json  1-simple.interactions  1-simple.opinions.json  2-complex.dot
old/: E.csv  R.csv
retrust/: interactions.py  quorum.py  reputation.py
shared/: matplotlib_helpers.py  numpy_helpers.py
simulation/: graphs.py  helpers.py  main.py  sim2.py
trust/: test.py
vis/: README.md  graphs.py  interactions.py  main.py  reputation.py  run.sh  viz.py  watch.ts
visualisation/: main.py  reputation.py
(+304 files in other folders)
