[tool.poetry]
name = "retrust"
version = "0.1.0"
description = ""
authors = ["liamzebedee <liamzebedee@yahoo.com.au>"]

[tool.poetry.dependencies]
python = "3.7"
pygraphviz = "^1.5"
networkx = "^2.2"
pydot = "^1.2"
matplotlib = "^3.0"
numpy = "^1.15"

[tool.poetry.dev-dependencies]
networkx = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
